# conanCppTemplate

./: CMakeLists.txt  README.md  conanfile.py  main.cpp
include/hello/: hello.hpp
src/: hello.cpp
